# threatmesh

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
detector-python/: Dockerfile  pyproject.toml
detector-python/tests/: test_detector.py
detector-python/threatmesh_detector/: __init__.py  agent.py  cli.py  detector.py  features.py  iforest.py  models.py  server.py  synth.py
docs/: ARCHITECTURE.md  architecture.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
frontend-ts/: package.json
frontend-ts/app/: globals.css  layout.tsx  page.tsx
frontend-ts/lib/: types.ts
gateway-go/: Dockerfile  go.mod  main.go
gateway-go/internal/config/: config.go
gateway-go/internal/hub/: hub.go  hub_test.go
gateway-go/internal/pipeline/: pipeline.go  pipeline_test.go
normalizer-rust/: Cargo.toml  Dockerfile
normalizer-rust/src/: lib.rs  main.rs  parse.rs
proto/: protocol.md
scripts/: verify.py
