[package]
name = "threatmesh-normalizer"
version = "0.1.0"
edition = "2021"
description = "threatmesh log normalizer: line-rate regex parsing + SHA-256 + feature extraction"
license = "MIT"

[lib]
name = "threatmesh_normalizer"
path = "src/lib.rs"

[[bin]]
name = "threatmesh-normalizer"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
